Add restore api and head api and fix bug in PUT lifecycle
